Various alignment fixes
Various alignment fixes

--- a/old-site/css/main.css
+++ b/old-site/css/main.css
@@ -116,11 +116,18 @@ h2 {
   background:#FF2400; 
   opacity:0.7;
   position: relative; 
+  text-align: center;
   top:0px; 
   height: 100%;
   width: 100%;
   float: left;
   box-shadow: 0 -2px 5px 2px black inset;
+}
+.orange-overlay img {
+  width: 35px;
+  position: absolute;
+  bottom: 12px;
+  margin: 0;
 }
 input#mce-EMAIL {
   width: 47.1%;
@@ -151,11 +158,6 @@ div.center {
 }
 .firstbillion p {
   font-size: 14px;
-}
-.firstbillion img {
-  width: 35px;
-  position: relative;
-  top: 124px;
 }
 h1 {
   margin: auto;
